<resources>
    <string name="app_name">retoFOH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_btn_dialog">Continuar</string>
    <string name="hint_edit_dni">DNI:</string>
    <string name="text_btn_invitadio">Entrar como invitado</string>
    <string name="text_btn_login">Sign In</string>
    <string name="text_title_alert">Seleccion Vacia</string>
    <string name="text_message_alert">Tienes que seleccionar minimo 1 producto para continuar</string>

    <string name="text_title_alert_pay">Pago Satisfactorio</string>
    <string name="text_message_alert_pay">El pago se ha realizado de manera satifcatoria</string>

    <string name="text_title_alert_pay_valid">Datos sin llenar</string>
    <string name="text_message_alert_pay_valid">Aun existen campos pendientes de llenar.</string>

    <string name="name_hint">Nombre</string>
    <string name="card_number_hint">Número de tarjeta</string>
    <string name="expiry_date_hint">Fecha de expiración (MM/AA)</string>
    <string name="cvv_hint">CVV</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="document_type_label">Tipo de documento</string>
    <string name="document_number_hint">Número de documento</string>
    <string name="total_amount_label">Total a cobrar: S/0.00</string>
    <string name="button_continue">Continuar</string>
</resources>